--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aioice==0.10.1
 aiortc==1.13.0
 altair==5.5.0
+annotated-types==0.7.0
+anyio==4.11.0
 attrs==25.3.0
 av==14.4.0
 blinker==1.9.0
@@ -13,6 +15,7 @@ contourpy==1.3.3
 cryptography==46.0.2
 cycler==0.12.1
 dnspython==2.8.0
+fastapi==0.118.0
 ffmpeg-python==0.2.0
 filelock==3.19.1
 fonttools==4.60.1
@@ -21,6 +24,7 @@ future==1.0.0
 gitdb==4.0.12
 GitPython==3.1.45
 google-crc32c==1.7.1
+h11==0.16.0
 idna==3.10
 ifaddr==0.2.0
 Jinja2==3.1.6
@@ -57,6 +61,8 @@ pillow==11.3.0
 protobuf==6.32.1
 pyarrow==21.0.0
 pycparser==2.23
+pydantic==2.11.10
+pydantic_core==2.33.2
 pydeck==0.9.1
 pydub==0.25.1
 pyee==13.0.0
@@ -71,7 +77,9 @@ requests==2.32.5
 rpds-py==0.27.1
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 sounddevice==0.5.2
+starlette==0.48.0
 streamlit==1.50.0
 streamlit-webrtc==0.63.11
 sympy==1.14.0
@@ -82,8 +90,11 @@ torch==2.8.0
 tornado==6.5.2
 tqdm==4.67.1
 triton==3.4.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.37.0
 watchdog==6.0.0
 webrtcvad==2.0.10
+websockets==15.0.1
